--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-.idea/GuiaPerguntas.iml
-.idea/misc.xml
-.idea/modules.xml
-.idea/workspace.xml
-.idea/inspectionProfiles/profiles_settings.xml
-.idea/inspectionProfiles/Project_Default.xml
+.idea
+coment.txt
+.gitignore
